Update booking session and consultant slotslot
